Ensure subscribe button hover is visible on blog

--- a/app/styles/components/layout/helm.scss
+++ b/app/styles/components/layout/helm.scss
@@ -74,6 +74,7 @@ layout-helm {
 
 		menu {
 			width:200px;
+			overflow:visible;
 		}
 
 		main {
